--- a/src/pages/index/detail/index.module.scss
+++ b/src/pages/index/detail/index.module.scss
@@ -11,6 +11,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    &-main {
+      position: relative;
+    }
+    &-ticker {
+      position: absolute;
+      bottom: 0;
+      right: 18px;
+      z-index: 9;
+      width: 130px;
+      height: 46px;
+      background: url('../../../assets/images/ticker.png') no-repeat;
+      background-size: 100%;
+      font-size: 18px;
+      line-height: 18px;
+      padding: 8px 40px 0 15px;
+    }
     &-img {
       width: 375px;
     }
@@ -23,8 +39,10 @@
       top: 75px;
       padding: 12px 18px;
       background-color: rgba(85, 85, 85, 0.5);
+      &-img {
+        width: 132px;
+      }
       &-btn {
-        margin-top: 10px;
         border-radius: 14px;
         font-size: 14px;
         line-height: 27px;
@@ -50,6 +68,43 @@
       justify-content: center;
       align-items: center;
       flex: 2;
+      margin: 10px;
+      height: 40px;
+      background-color: #3291f8 !important;
+      font-size: 14px;
+    }
+    &-share {
+      display: flex;
+      flex: 1;
+      height: 40px;
+      margin: 10px;
+      color: #3291f8 !important;
+      border: 2px solid #3291f8;
+      font-size: 14px;
+      justify-content: center;
+      align-items: center;
+      &-icon {
+        width: 14px;
+        height: 14px;
+        margin-right: 3px;
+        display: inline-block;
+      }
+    }
+    &-del {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      margin: 10px;
+      height: 40px;
+      background-color: #f83232 !important;
+      font-size: 14px;
+    }
+    &-edit {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
       margin: 10px;
       height: 40px;
       background-color: #3291f8 !important;
