--- a/src/pages/index/index.module.scss
+++ b/src/pages/index/index.module.scss
@@ -11,8 +11,34 @@
   &-bg {
     height: 205px;
     margin-bottom: -41px;
-    background: url(../../assets/images/banner.png) #333 no-repeat top 22px right;
-    background-size: 168px auto;
+    background: url(../../assets/images/banner.png) #5ad79d no-repeat top 22px right;
+    background-size: 375px 205px;
+    font-size: 32px;
+    line-height: 48px;
+    color: #fff;
+    padding: 48px 181px 61px 32px;
+    font-style: italic;
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      top: 48px;
+      left: 28px;
+      width: 80px;
+      height: 80px;
+      border-left: 1px solid #fff;
+      border-top: 1px solid #fff;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      width: 80px;
+      height: 50px;
+      right: 181px;
+      bottom: 61px;
+      border-right: 1px solid #fff;
+      border-bottom: 1px solid #fff;
+    }
   }
 }
 
@@ -53,9 +79,11 @@
 }
 
 .countdown {
+  position: relative;
+  z-index: 9;
   height: 113px;
-  background: url(../../assets/images/countdown-bg.png) no-repeat top right;
-  background-size: 100%;
+  background: url(../../assets/images/countdown-bg.png) no-repeat center;
+  background-size: 345px 113px;
   padding: 23px 0 0;
   &-title {
     font-size: 12px;
@@ -66,6 +94,7 @@
       content: '';
       display: inline-block;
       vertical-align: middle;
+      margin-right: 5px;
       width: 14px;
       height: 16px;
       background: url(../../assets/images/countdown.png) no-repeat top;
@@ -105,9 +134,21 @@
     height: 154px;
     margin-bottom: 13px;
     box-shadow: 2px 2px 10px rgba($color: #1e606f, $alpha: 0.22);
+    position: relative;
+    padding: 48px 0 0 31px;
     .img {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 167px;
       height: 154px;
+    }
+    .text {
+      position: relative;
+      font-size: 14px;
+      line-height: 20px;
+      color: #85bc27;
+      z-index: 9;
     }
   }
 }
