--- a/src/pages/user/index.module.scss
+++ b/src/pages/user/index.module.scss
@@ -211,8 +211,8 @@
     display: flex;
     flex: 1;
     height: 40px;
-    color: #3291f8 !important;
-    border: 2px solid #3291f8;
+    color: #fff !important;
+    background-color: #85bc27 !important;
     font-size: 14px;
     justify-content: center;
     align-items: center;
